add slide animations

--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,12 @@
             ],
             "styles": [
               "src/custom-theme.scss",
+              "node_modules/aos/dist/aos.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/aos/dist/aos.js"
+            ]
           },
           "configurations": {
             "production": {
