Aliases for Import Statements

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@app/*": ["app/*"]
+      "@app/*": ["app/*"],
+      "@services/*": ["app/user/*"]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
