--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-in-memory-web-api": "^0.8.0",
     "aos": "^3.0.0-beta.6",
     "hammerjs": "^2.0.8",
+    "ngx-toastr": "^11.3.3",
     "rxjs": "~6.6.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
