--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "angular-in-memory-web-api": "^0.8.0",
     "hammerjs": "^2.0.8",
+    "ngx-charts-8": "^8.1.1",
     "ngx-toastr": "^11.3.3",
     "rxjs": "~6.6.3",
     "tslib": "^1.9.0",
